# libyutani

./: .gitignore  AUTHORS  COPYING  README.md  autogen.sh  cflow.result  configure.ac  notes.txt  yutani.pc  yutani.pc.in
packaging/: libyutani.spec
src/: Makefile.am  common.h  compat.h  evdev-touchpad.c  evdev.c  evdev.h  tty.c  tty.h  udev.c  udev.h  yt_evdev_example.c  yutani.c  yutani.h
